--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ plugins {
 }
 
 group 'com.github.agmcc'
-version '0.1.0'
+
+version = 'git describe --abbrev=0'.execute().text.trim()
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
