--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=agmcc_swordfish
 sonar.sources=./src
+sonar.exclusions=./src/integrationTest/resources/**/*
 sonar.java.binaries=./build/classes
 sonar.coverage.jacoco.xmlReportPaths=./build/reports/jacoco/test/jacocoTestReport.xml
