Manage all versions through release script

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=agmcc_swordfish
-sonar.sources=./src
-sonar.exclusions=./src/integrationTest/resources/**/*
-sonar.java.binaries=./build/classes
-sonar.coverage.jacoco.xmlReportPaths=./build/reports/jacoco/test/jacocoTestReport.xml
+sonar.projectVersion=0.2.0
+sonar.sources=src
+sonar.exclusions=src/integrationTest/resources/**/*
+sonar.java.binaries=build/classes
+sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
