--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
 
 group 'com.github.agmcc'
 
-version = 'git describe --abbrev=0'.execute().text.trim()
+version = '0.2.0'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
