--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ jdk:
   - openjdk8
   - openjdk12
 
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
 deploy:
   provider: releases
   api_key:
