--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=agmcc_swordfish
 sonar.projectVersion=0.2.0
-sonar.sources=src
-sonar.exclusions=src/integrationTest/resources/**/*
+sonar.sources=src/main
+sonar.tests=src/test,src/integrationTest
 sonar.java.binaries=build/classes
 sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
